# rag_security_experiment

./: .env.example  .gitignore  README.md  generate_v2_full.py  pyproject.toml
data/: attack_questions.jsonl  clean_docs.jsonl  normal_questions.jsonl
data/v1/: attack_docs.jsonl  injection_patterns.jsonl
data/v2/: attack_docs.jsonl  attack_questions.jsonl  clean_docs.jsonl  injection_patterns.jsonl  normal_questions.jsonl
data/v2_full/: attack_docs.jsonl  attack_questions.jsonl  clean_docs.jsonl  injection_patterns.jsonl  normal_questions.jsonl
outputs/tables/: asr_by_group.md  attack_type_asr_comparison.md  cir_asr_comparison.md  control_groups_table.md  dataset_statistics_table.md  filter_effectiveness_table.md  final_group_summary_table.md  manual_review_table.md
src/rag_security_experiment/: chunker.py  cli.py  config.py  data_loader.py  defense.py  embeddings.py  evaluator.py  experiment.py  llm_client.py  metrics.py  prompt_builder.py  retriever.py
